# tnmf

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  CachingFFT.py  LICENSE  README.md  Readme.md  TransformInvariantNMF.py  berkeley_images.py  demo.py  pyproject.toml  requirements.txt  setup.cfg  signals.py  st_berkeley_images.py  st_demo.py  utils.py
.github/workflows/: changelog.yml  flake8.yml  publish-to-pypi.yml  publish-to-test-pypi.yml  pylint.yml  pytest.yml  sphinx.yml
demos/: demo_image.py  demo_selector.py  synthetic_signals.py
doc/: GeneralIntroduction.md  conf.py  index.rst  link_generalintroduction.md  link_license.rst
doc/_static/css/: emdgroup.css
docs/: .buildinfo  GeneralIntroduction.html  genindex.html  index.html  link_changelog.html  link_generalintroduction.html  link_license.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_sources/autoapi/: index.rst.txt
docs/_sources/autoapi/data_loading/: index.rst.txt
docs/_sources/autoapi/tnmf/: index.rst.txt
docs/_sources/autoapi/tnmf/TransformInvariantNMF/: index.rst.txt
docs/_sources/autoapi/tnmf/_version/: index.rst.txt
docs/_sources/autoapi/tnmf/backends/: index.rst.txt
docs/_sources/autoapi/tnmf/backends/NumPy/: index.rst.txt
docs/_sources/autoapi/tnmf/backends/NumPy_CachingFFT/: index.rst.txt
docs/_sources/autoapi/tnmf/backends/NumPy_FFT/: index.rst.txt
docs/_sources/autoapi/tnmf/backends/PyTorch/: index.rst.txt
docs/_sources/autoapi/tnmf/backends/PyTorch_FFT/: index.rst.txt
docs/_sources/autoapi/tnmf/backends/_Backend/: index.rst.txt
docs/_sources/autoapi/tnmf/backends/_NumPyBackend/: index.rst.txt
docs/_sources/autoapi/tnmf/backends/_NumPyFFTBackend/: index.rst.txt
docs/_sources/autoapi/tnmf/backends/_PyTorchBackend/: index.rst.txt
docs/_sources/autoapi/tnmf/old/: index.rst.txt
docs/_sources/autoapi/tnmf/old/TransformInvariantNMF/: index.rst.txt
docs/_sources/autoapi/tnmf/old/signals/: index.rst.txt
docs/_sources/autoapi/tnmf/old/st_demo/: index.rst.txt
docs/_sources/autoapi/tnmf/old/utils/: index.rst.txt
docs/_sources/autoapi/tnmf/tests/: index.rst.txt
docs/_sources/autoapi/tnmf/tests/test_1d/: index.rst.txt
docs/_sources/autoapi/tnmf/tests/test_backends/: index.rst.txt
docs/_sources/autoapi/tnmf/tests/test_demos/: index.rst.txt
docs/_sources/autoapi/tnmf/tests/test_examples/: index.rst.txt
docs/_sources/autoapi/tnmf/tests/test_init/: index.rst.txt
docs/_sources/autoapi/tnmf/tests/test_minibatch/: index.rst.txt
docs/_sources/autoapi/tnmf/tests/test_old/: index.rst.txt
docs/_sources/autoapi/tnmf/tests/test_sparsity_inhibition/: index.rst.txt
docs/_sources/autoapi/tnmf/tests/test_stream/: index.rst.txt
docs/_sources/autoapi/tnmf/utils/: index.rst.txt
docs/_sources/autoapi/tnmf/utils/data_loading/: index.rst.txt
docs/_sources/autoapi/tnmf/utils/demo/: index.rst.txt
docs/autoapi/: index.html
docs/autoapi/data_loading/: index.html
docs/autoapi/tnmf/: index.html
docs/autoapi/tnmf/TransformInvariantNMF/: index.html
docs/autoapi/tnmf/_version/: index.html
docs/autoapi/tnmf/backends/: index.html
docs/autoapi/tnmf/backends/NumPy/: index.html
docs/autoapi/tnmf/backends/NumPy_CachingFFT/: index.html
docs/autoapi/tnmf/backends/NumPy_FFT/: index.html
docs/autoapi/tnmf/backends/PyTorch/: index.html
docs/autoapi/tnmf/backends/PyTorch_FFT/: index.html
docs/autoapi/tnmf/backends/_Backend/: index.html
docs/autoapi/tnmf/backends/_NumPyBackend/: index.html
docs/autoapi/tnmf/backends/_NumPyFFTBackend/: index.html
docs/autoapi/tnmf/backends/_PyTorchBackend/: index.html
docs/autoapi/tnmf/old/: index.html
docs/autoapi/tnmf/old/TransformInvariantNMF/: index.html
docs/autoapi/tnmf/old/signals/: index.html
docs/autoapi/tnmf/old/st_demo/: index.html
docs/autoapi/tnmf/old/utils/: index.html
docs/autoapi/tnmf/tests/: index.html
docs/autoapi/tnmf/tests/test_1d/: index.html
docs/autoapi/tnmf/tests/test_backends/: index.html
docs/autoapi/tnmf/tests/test_demos/: index.html
docs/autoapi/tnmf/tests/test_examples/: index.html
docs/autoapi/tnmf/tests/test_init/: index.html
docs/autoapi/tnmf/tests/test_minibatch/: index.html
docs/autoapi/tnmf/tests/test_old/: index.html
docs/autoapi/tnmf/tests/test_sparsity_inhibition/: index.html
docs/autoapi/tnmf/tests/test_stream/: index.html
docs/autoapi/tnmf/utils/: index.html
docs/autoapi/tnmf/utils/data_loading/: index.html
docs/autoapi/tnmf/utils/demo/: index.html
docs/autoapi/tnmf/utils/signals/: index.html
examples/: __init__.py  convergence_control.py  minibatch_algorithms.py  shift_invariant_decomposition.py
scripts/: tnmf.py
tnmf/: TransformInvariantNMF.py  __init__.py
tnmf/backends/: Backend.py  NumPy.py  NumPy_CachingFFT.py  NumPy_FFT.py  PyTorch.py  PyTorch_FFT.py  _Backend.py  _NumPyBackend.py  _NumPyFFTBackend.py  _PyTorchBackend.py
tnmf/old/: TransformInvariantNMF.py  st_demo.py  utils.py
tnmf/tests/: test_1d.py  test_backends.py  test_demos.py  test_examples.py  test_init.py  test_minibatch.py  test_old.py  test_simple.py  test_sparsity_inhibition.py  test_stream.py  test_subsamples.py  utils.py
tnmf/utils/: data_loading.py  demo.py  signals.py
(+1 files in other folders)
