[metadata]
name = tnmf
author = Adrian Šošić, Mathias Winkel
author_email = adrian.sosic@merckgroup.com, mathias.winkel@merckgroup.com
description = Transform-Invariant Non-Negative Matrix Factorization
long_description = file: Readme.md
long_description_content_type = text/markdown
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License
# TODO: enable URLs once the repository is public
;url = https://github.com/emdgroup/tnmf
;project_urls =
;    Bug Tracker = https://github.com/emdgroup/tnmf/issues

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.7
install_requires =
    matplotlib>=3.3.3
    more-itertools>=8.6.0
    numpy>=1.19.4
    opt-einsum>=3.3.0
    scipy>=1.5.4
    streamlit>=0.71.0
    torch>=1.8.1

[options.entry_points]
console_scripts =
    tnmf = scripts.tnmf:main

[aliases]
test = pytest

[tool:pytest]
log_cli = True
# TODO: temporarily disable coverage because it breaks PyCharm's debugger
# https://www.jetbrains.com/help/pycharm/run-debug-configuration-py-test.html
addopts =
    --ignore doc
#     --cov=tnmf

[flake8]
exclude = .git,__pycache__,doc,env,venv,.venv
max-complexity = 10
max-line-length = 127
count = True
show_source = True
statistics = True

extend-ignore =
    # Use of assert detected. The enclosed code will be removed when compiling to optimised byte code.
    S101

per-file-ignores =
    # 'tnmf.*' imported but unused, 'from tnmf import *' used; unable to detect undefined names
    tnmf/tests/test_init.py: F401, F403
    # 'fftconvolve_sum' is too complex (11)
    tnmf/backends/NumPy_FFT.py: C901
    # import statements after 'sys.path.append'
    demos/demo_image.py: E402

[pylint.MASTER]
# see http://pylint.pycqa.org/en/latest/technical_reference/features.html for all pylint options
# or run pylint --generate-rcfile
ignore = .git,__pycache__,doc,env,venv,.venv,_version.py

[pylint.REPORTS]
output-format = colorized

[pylint.'MESSAGES CONTROL']
# to get the identifier of a message ID run, e.g. pylint --help-msg=W0511
disable = invalid-name,
          fixme,
          too-many-instance-attributes,
          too-many-arguments,
          too-many-locals,
          too-many-statements,
          duplicate-code,
          logging-fstring-interpolation,
          # TODO: the following should be removed rather sooner than later
          missing-function-docstring

[pylint.'FORMAT']
max-line-length = 127

[pylint.BASIC]
bad-names-rgxs=_?num_.*

[pylint.TYPECHECK]
# List of members which are set dynamically and missed by Pylint inference
# system, and so shouldn't trigger E1101 when accessed.
generated-members=numpy.*, torch.*
